syntax = "proto3";

package proto.services.task_svc.v1;

option go_package = "gen/proto/services/task-svc";

//
// GetBreadcrumbs
//

message GetBreadcrumbsRequest {
  optional string organization_id = 1;
  optional string ward_id = 2;
  optional string room_id = 3;
  optional string bed_id = 4;
  optional string patient_id = 5;
}

message GetBreadcrumbsResponse {
  optional Organization organization = 1;

  message Organization {
    string id = 1;
    string name = 2;
    optional Ward ward = 3;
  }

  message Ward {
    string id = 1;
    string name = 2;
    optional Room room = 3;
  }

  message Room {
    string id = 1;
    string name = 2;
    optional Bed bed = 3;
  }

  message Bed {
    string id = 1;
    string name = 2;
    optional Patient patient = 3;
  }

  message Patient {
    string id = 1;
    string name = 2;
  }
}

//
// BreadcrumbService
//

service BreadcrumbService {
  rpc GetBreadcrumbs(GetBreadcrumbsRequest) returns (GetBreadcrumbsResponse) {}
}
