syntax = "proto3";

option go_package = "task-svc/api";

//
// CreatePatient
//

message CreatePatientRequest {
	string humanReadableIdentifier = 1;
}

message CreatePatientResponse {
	string id = 1;
}

//
// GetPatient
//

message GetPatientRequest {
	string id = 1;
}

message GetPatientResponse {
	string id = 1;
	string humanReadableIdentifier = 2;
}

//
// UpdatePatient
//

message UpdatePatientRequest {
	string id = 1;
	optional string humanReadableIdentifier = 2;
}

message UpdatePatientResponse {}

//
// PatientService
//

service PatientService {
	rpc CreatePatient(CreatePatientRequest) returns (CreatePatientResponse) {}
	rpc GetPatient(GetPatientRequest) returns (GetPatientResponse) {}
	rpc UpdatePatient(UpdatePatientRequest) returns (UpdatePatientResponse) {}
}
